# acc

./: .gitignore  README.md  aircraft_fixed_wing.json  pyproject.toml
.zed/: debug.json
docs/: wind_observer_numerical_issues.md
scripts/: synthetic_fixed_wing.py
src/acc/: __init__.py  aero.py  calc_aero.py  cli.py  log_parser.py  models.py  plot_log.py  plotting.py
src/acc/aero/: __init__.py  compute_coefficients.py  frames.py  physics.py  wind_observer.py
src/acc/log_parser/: __init__.py  ardupilot.py  common.py
src/acc/model/: aero_coefficients.py  atmosphere_model.py  flight_state.py  wind_estimate.py
src/acc/plotting/: __init__.py  plot_log.py
src/aero/: __init__.py  compute_coefficients.py  physics.py
src/config/: aircraft.json
src/model/: aero_coefficients.py  aircraft_model.py
tests/: test_aero.py  test_models.py  test_wind.py
