[project]
name = "acc"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymavlink>=2.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pydantic>=2.5",
]

[project.scripts]
parse-log = "acc.log_parser:main"
plot-log = "acc.plot_log:main"
calc-aero = "acc.calc_aero:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
